# multidim_root_find

./: CMakeLists.txt  README.md  five.c  five_f.c  five_f.h  multidim_root_find.c  multidim_root_find.h  newton-raphson.c  newton_custom_f.c  newton_custom_f.h  newton_custom_fdf.c  newton_custom_fdf.h  powell.c  powell.h  tools.c  tools.h
five/: five.h  five_exp.c  five_lin.c  five_sq.c  five_trig.c
maxima/: five.wxmx
multidim_root_find/: tools.c
powell/: powell.c  powell.h
pres/: presentation.odp
rosenbrock/: rosenbrock.c  rosenbrock.h
solvers/: newton_custom_f.c  newton_custom_fdf.c
